# test_msdp

./: .gitignore  README.md  command_demo.sh  env_slam.yml  environment.yml  exp.py  exp_ivm.py  install_model_inside_docker.sh  install_msdp  log  setup.py  test_dpviewer.py  train_vo.py  wget-log
Pangolin/scripts/: install_prerequisites.sh
Viewerexp/: CMakeLists.txt  CMakeLists.txt.old  setup.py
Viewerexp/viewerx/: CMakeLists.txt  CMakeLists.txt.old  __init__.py  viewer.cpp  viewer_cuda.cu
data/ETH3D/plant_scene_1/: groundtruth.txt  rgb.txt
data/ETH3D/plant_scene_2/: groundtruth.txt  rgb.txt
data/ETH3D/plant_scene_3/: groundtruth.txt  rgb.txt
dataloaders/: DLWrapper.py  ETH3D.py  IVM.py  combined.py
gconfigs/: fullsystem.gin
multi_slam/: fullsystem.py  homog_ops.py  locnet.py  metrics.py
multi_slam/framegraph/: backend.py  frontend.py  patchgraph.py  slamend.py
multi_slam/modules/: new_patchifier.py
multi_slam/msdp_dpvo/altcorr/: correlation.py
multi_slam/solver/: epa_ops.py  iterative_pose_opt.py
multi_slam/utils/: locnet_utils.py
